--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,18 @@
 
     <groupId>com.czb</groupId>
     <artifactId>io-study</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>mydubbo</module>
+    </modules>
 
-<dependencies>
-
+    <dependencies>
+    <dependency>
+        <groupId>cn.hutool</groupId>
+        <artifactId>hutool-all</artifactId>
+        <version>4.6.3</version>
+    </dependency>
     <dependency>
         <groupId>com.crazymakercircle</groupId>
         <artifactId>chatCommon</artifactId>
